--- a/extensions/gconv/Makefile
+++ b/extensions/gconv/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building the gconv package for MuntsOS
 
-# Copyright (C)2019, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2019-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
