Changed EMBLINUXBASE to MUNTSOS.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19190 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/BeagleBone/Makefile
+++ b/boot/BeagleBone/Makefile
@@ -1,6 +1,6 @@
 # Build boot file tarballs for BeagleBone platform boards
 
-# Copyright (C)2017-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,10 +20,10 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE	?= ../..
+MUNTSOS		?= ../..
 BOARDNAME	?= BeagleBone
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 UBOOT_NAME	= u-boot
 UBOOT_VER	= 2018.03
