--- a/boot/BeagleBone/overlays/Makefile
+++ b/boot/BeagleBone/overlays/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building Beagle Bone device tree overlays
 
-# Copyright (C)2017-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,13 +20,13 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE	?= ../../..
+MUNTSOS		?= ../../..
 BOARDNAME	?= BeagleBone
 
 BBOVERLAYSURL	= https://github.com/beagleboard/bb.org-overlays.git
 BBOVERLAYSSRC	= bb.org-overlays
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 default: overlays.done
 
@@ -38,7 +38,7 @@ default: overlays.done
 # Compile the device tree compiler
 
 dtc.done:
-	$(MAKE) -C $(EMBLINUXBASE)/bootkernel/kernel dtbs BOARDNAME=$(BOARDNAME)
+	$(MAKE) -C $(MUNTSOS)/bootkernel/kernel dtbs BOARDNAME=$(BOARDNAME)
 	touch $@
 
 # Check out BeagleBone overlays repository
@@ -71,6 +71,6 @@ clean:
 
 reallyclean: clean
 	rm -f dtc.done
-	-$(MAKE) -C $(EMBLINUXBASE)/bootkernel/kernel reallyclean BOARDNAME=$(BOARDNAME)
+	-$(MAKE) -C $(MUNTSOS)/bootkernel/kernel reallyclean BOARDNAME=$(BOARDNAME)
 
 distclean: reallyclean
