--- a/examples/ada/freemodbus/rtu-adc-dac-pi-zero/Makefile
+++ b/examples/ada/freemodbus/rtu-adc-dac-pi-zero/Makefile
@@ -1,4 +1,4 @@
-# Copyright (C)2020, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2020-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -18,11 +18,11 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE	?= $(HOME)/arm-linux-mcu
+MUNTSOS		?= $(HOME)/arm-linux-mcu
 
-MODBUS_SRC	:= $(EMBLINUXBASE)/examples/ada/freemodbus
+MODBUS_SRC	:= $(MUNTSOS)/examples/ada/freemodbus
 
-include $(EMBLINUXBASE)/examples/ada/include/examples.mk
+include $(MUNTSOS)/examples/ada/include/examples.mk
 include $(MODBUS_SRC)/freemodbus.mk
 
 default: rtu-adc-dac-pi-zero
