--- a/toolchain/metapackages/Makefile
+++ b/toolchain/metapackages/Makefile
@@ -1,7 +1,7 @@
 # Makefile for building a metapackages for all MuntsOS cross-toolchain
 # packages
 
-# Copyright (C)2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2018-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -21,10 +21,10 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE	?= ../..
+MUNTSOS		?= ../..
 BOARDNAME	?= RaspberryPi
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 BOARDNAMES	= BeagleBone RaspberryPi1 RaspberryPi2
 TOOLCHAIN	= Linaro
