--- a/boot/RaspberryPi/overlays/Makefile
+++ b/boot/RaspberryPi/overlays/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building Raspberry Pi device tree overlays
 
-# Copyright (C)2017-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,10 +20,10 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE	?= ../../..
+MUNTSOS		?= ../../..
 BOARDNAME	?= RaspberryPi1
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 default: overlays.done
 
@@ -35,7 +35,7 @@ default: overlays.done
 # Compile the device tree compiler
 
 dtc.done:
-	$(MAKE) -C $(EMBLINUXBASE)/bootkernel/kernel dtbs BOARDNAME=$(BOARDNAME)
+	$(MAKE) -C $(MUNTSOS)/bootkernel/kernel dtbs BOARDNAME=$(BOARDNAME)
 	touch $@
 
 # Compile device tree overlays
@@ -56,7 +56,7 @@ clean:
 	rm -f overlays.done *.dtbo ../overlays.md5
 
 reallyclean: clean
-	$(MAKE) -C $(EMBLINUXBASE)/bootkernel/kernel reallyclean BOARDNAME=$(BOARDNAME)
+	$(MAKE) -C $(MUNTSOS)/bootkernel/kernel reallyclean BOARDNAME=$(BOARDNAME)
 	rm -f dtc.done
 
 distclean: reallyclean
