--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -20,11 +20,11 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE		?= ../..
+MUNTSOS			?= ../..
 BOARDNAME		?= UNDEFINED
 MAKEJOBS		?= -j 2
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 BUILDOS			= --build=`uname -m`
 TARGETOS		= --host=$(CONFIGURE_NAME)
