--- a/examples/c++/programs/Makefile
+++ b/examples/c++/programs/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building C++ example programs for MuntsOS
 
-# Copyright (C)2016-2020, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2016-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -22,17 +22,17 @@
 
 # Override the following macro to build out of tree
 
-EMBLINUXBASE	?= ../../..
+MUNTSOS		?= ../../..
 
 ifneq ($(BOARDNAME),)
 # Cross compile for MuntsOS
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 else
 # Native compile for Linux
 LIBSIMPLEIO	?= /usr/local/share/libsimpleio
 endif
 
-CXX_SRC		?= $(EMBLINUXBASE)/examples/c++
+CXX_SRC		?= $(MUNTSOS)/examples/c++
 CXXDEPS		+= libsimpleio++.a
 CXXFLAGS	+= -I$(CXX_SRC)/lib
 
