--- a/examples/c/lib/Makefile
+++ b/examples/c/lib/Makefile
@@ -1,6 +1,6 @@
 # Makefile to build the C examples software component library
 
-# Copyright (C)2016-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2016-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,11 +20,11 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE	?= ../../..
+MUNTSOS		?= ../../..
 
 ifneq ($(BOARDNAME),)
 # Cross-compile for MuntsOS
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 else
 # Native compile for Linux
 BOARDBASE	:= $(shell $(CROSS_COMPILE)gcc -dumpmachine)
