--- a/examples/csharp/programs/test_raspberrypi_adc/Makefile
+++ b/examples/csharp/programs/test_raspberrypi_adc/Makefile
@@ -1,6 +1,6 @@
 # Generic Makefile template for building C# .Net Core applications
 
-# Copyright (C)2018-2020, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2018-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -22,8 +22,8 @@
 
 ifneq ($(BOARDNAME),)
 # Cross compile for MuntsOS Embedded Linux
-EMBLINUXBASE	?= $(HOME)/muntsos
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+MUNTSOS		?= $(HOME)/muntsos
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 else
 # Native compile
 LIBSIMPLEIO	?= /usr/local/share/libsimpleio
