--- a/examples/elements/dotnet/programs/swift/test_userled_gpio/Makefile
+++ b/examples/elements/dotnet/programs/swift/test_userled_gpio/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building RemObjects Elements .Net Core applications
 
-# Copyright (C)2019-2020, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2019-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -22,9 +22,9 @@
 
 ifneq ($(BOARDNAME),)
 # Override the following macro to build out of tree
-EMBLINUXBASE    ?= $(HOME)/muntsos
+MUNTSOS    ?= $(HOME)/muntsos
 # Cross compile
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 else
 # Native compile
 LIBSIMPLEIO     ?= /usr/local/share/libsimpleio
