--- a/extensions/GPIO/clients/ada/HTTP/Makefile
+++ b/extensions/GPIO/clients/ada/HTTP/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building Ada example programs
 
-# Copyright (C)2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2018-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -22,8 +22,8 @@
 
 ifneq ($(BOARDNAME),)
 # Cross compile for MuntsOS
-EMBLINUXBASE	?= ../../../../..
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+MUNTSOS		?= ../../../../..
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 else
 # Native compile for Linux
 LIBSIMPLEIO	?= /usr/local/share/libsimpleio
