--- a/extensions/GPIO/clients/csharp/ONC-RPC/Toggle_Speed/Makefile
+++ b/extensions/GPIO/clients/csharp/ONC-RPC/Toggle_Speed/Makefile
@@ -1,6 +1,6 @@
 # Generic Makefile template for building C# applications
 
-# Copyright (C)2014-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2014-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -22,8 +22,8 @@
 
 # Override the following macros to build out of tree
 
-EMBLINUXBASE	?= $(shell pwd)/../../../../../..
-CSHARPSRC	?= $(EMBLINUXBASE)/examples/csharp
+MUNTSOS		?= $(shell pwd)/../../../../../..
+CSHARPSRC	?= $(MUNTSOS)/examples/csharp
 
 # Build the project
 
