--- a/extensions/GPIO/linx/Makefile
+++ b/extensions/GPIO/linx/Makefile
@@ -1,7 +1,7 @@
 # Makefile for Raspberry Pi LPC1114 I/O Processor Expansion Board
 # SPI Agent National Instruments LabView Linx server program
 
-# Copyright (C)2016-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2016-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -22,9 +22,9 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 BOARDNAME	?= UNDEFINED
-EMBLINUXBASE	?= $(shell pwd)/../../..
+MUNTSOS		?= $(shell pwd)/../../..
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 LIBSIMPLEIO	?= $(GCCSYSROOT)/usr/share/libsimpleio
 
