--- a/extensions/dma/Makefile
+++ b/extensions/dma/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building DragonFly Mail Agent package for MuntsOS
 
-# Copyright (C)2020, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2020-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -21,9 +21,9 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 BOARDNAME	?= UNDEFINED
-EMBLINUXBASE	?= ../..
+MUNTSOS		?= ../..
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 include $(LIBSIMPLEIO)/include/dpkg.mk
 
 SERVERNAME	?= nonexistent.munts.net
