--- a/extensions/mybasic/Makefile
+++ b/extensions/mybasic/Makefile
@@ -1,7 +1,7 @@
 # Makefile for building the MY-BASIC package for MuntsOS
 # including bindings for libsimpleio
 
-# Copyright (C)2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2018-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -22,9 +22,9 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 BOARDNAME	?= UNDEFINED
-EMBLINUXBASE	?= $(shell pwd)/../..
+MUNTSOS		?= $(shell pwd)/../..
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 include $(LIBSIMPLEIO)/include/dpkg.mk
 
 LIBSIMPLEIO	?= $(GCCSYSROOT)/usr/share/libsimpleio
