--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -1,6 +1,6 @@
 # Makefile for packaging Free Pascal ARM cross-toolchain for MuntsOS
 
-# Copyright (C)2017-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,9 +20,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE    ?= ../..
+MUNTSOS    ?= ../..
 
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 FPC_VERSION	= 3.2.0
 FPC_SRCDIR	= fpc-$(FPC_VERSION)
