--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -1,6 +1,6 @@
 # Makefile definitions for building GNAT Ada application programs
 
-# Copyright (C)2017-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,8 +20,8 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-EMBLINUXBASE	?= ../..
-include $(EMBLINUXBASE)/include/$(BOARDNAME).mk
+MUNTSOS		?= ../..
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 BUILDNUM	?= 1
 
