--- a/bootkernel/kernel/BeagleBone.config
+++ b/bootkernel/kernel/BeagleBone.config
@@ -2856,6 +2856,7 @@ CONFIG_TI_AM335X_ADC=y
 # CONFIG_CCS811 is not set
 # CONFIG_HM3301 is not set
 # CONFIG_IAQCORE is not set
+# CONFIG_SCD30_CORE is not set
 # CONFIG_SENSIRION_SGP30 is not set
 # CONFIG_SPS30 is not set
 # CONFIG_VZ89X is not set
