--- a/bootkernel/kernel/BeagleBone.config
+++ b/bootkernel/kernel/BeagleBone.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.4.70 Kernel Configuration
+# Linux/arm 5.4.87 Kernel Configuration
 #
 
 #
@@ -1305,6 +1305,7 @@ CONFIG_SWPHY=y
 # CONFIG_DP83TC811_PHY is not set
 # CONFIG_DP83848_PHY is not set
 # CONFIG_DP83867_PHY is not set
+# CONFIG_DP83869_PHY is not set
 CONFIG_FIXED_PHY=y
 # CONFIG_ICPLUS_PHY is not set
 # CONFIG_INTEL_XWAY_PHY is not set
