Added reallyclean and distclean targets
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19210 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -73,5 +73,11 @@ package.deb: libaws.a
 
 ###############################################################################
 
+# Remove working files
+
 clean:
 	rm -rf *.a obj $(PKGDIR) $(PKGFILE) src/aws-os_lib.ads
+
+reallyclean: clean
+
+distclean: reallyclean
