Added --disable-gui to configure flags
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19216 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/emailrelay/Makefile
+++ b/extensions/emailrelay/Makefile
@@ -60,7 +60,7 @@ src.done: $(SRCDIST)
 # Compile sources
 
 build.done: src.done
-	cd $(SRCDIR) ; ./configure $(BUILDOS) $(TARGETOS) --disable-ipv6 CXX=$(CROSS_COMPILE)g++
+	cd $(SRCDIR) ; ./configure $(BUILDOS) $(TARGETOS) --disable-gui --disable-ipv6 CXX=$(CROSS_COMPILE)g++
 	$(MAKE) -C $(SRCDIR)
 	touch $@
 
