Added RaspberryPi4Gadget to the allconfig target.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19219 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -114,6 +114,7 @@ allconfig:
 	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi3
 	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi3Gadget
 	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi4
+	$(MAKE) config.done reallyclean BOARDNAME=RaspberryPi4Gadget
 
 ###############################################################################
 
