Rationalized Debian package names.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19242 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/control
+++ b/toolchain/freepascal/control
@@ -4,4 +4,4 @@ Priority: extra
 Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
-Description: Free Pascal cross toolchain for @@BOARDNAME@@
+Description: Free Pascal cross-toolchain for @@BOARDNAME@@
