Patch dma.h to avoid compile error
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19290 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/dma/Makefile
+++ b/extensions/dma/Makefile
@@ -39,6 +39,7 @@ default: package.deb
 
 source.done:
 	git clone https://github.com/corecode/dma.git
+	cd dma && patch -b -p0 <../dma.patch
 	touch $@
 
 compile.done: source.done
