--- a/examples/ada/freemodbus/rtu-raspberrypi-gpio/Makefile
+++ b/examples/ada/freemodbus/rtu-raspberrypi-gpio/Makefile
@@ -18,7 +18,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-MUNTSOS		?= $(HOME)/arm-linux-mcu
+# Override the following macro to build out of tree
+
+MUNTSOS		?= ../../../..
 
 MODBUS_SRC	:= $(MUNTSOS)/examples/ada/freemodbus
 
