Do not include MuntsOS platform include file (BeagleBone.mk et al) anymore.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19362 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/ada/freemodbus/rtu-adc-dac-pi-zero/Makefile
+++ b/examples/ada/freemodbus/rtu-adc-dac-pi-zero/Makefile
@@ -24,6 +24,8 @@ MUNTSOS		?= ../../../..
 
 MODBUS_SRC	:= $(MUNTSOS)/examples/ada/freemodbus
 
+LIBSIMPLEIO	?= /usr/local/share/libsimpleio
+
 include $(MUNTSOS)/examples/ada/include/examples.mk
 include $(MODBUS_SRC)/freemodbus.mk
 
