Abandon building RemObjects applications on a Linux host.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19514 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/elements/dotnet/programs/csharp/test_userled_gpio/Makefile
+++ b/examples/elements/dotnet/programs/csharp/test_userled_gpio/Makefile
@@ -1,4 +1,4 @@
-# Makefile for building RemObjects Elements .Net Core applications
+# Makefile for building RemObjects Elements .Net 5 applications
 
 # Copyright (C)2019-2021, Philip Munts, President, Munts AM Corp.
 #
@@ -20,7 +20,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-LIBSIMPLEIO     ?= /usr/local/share/libsimpleio
+LIBSIMPLEIO     ?= $(shell cygpath -m $(HOME)/libsimpleio)
 ELEMENTSSRC	?= $(LIBSIMPLEIO)/elements
 
 # Build the project
