Only include USB Network Gadget stuff in /etc/network.conf for USB gadget platforms.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19523 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/network.conf
+++ b/bootkernel/initramfs/network.conf
@@ -1,6 +1,6 @@
 # Static network configuration for an embedded Linux system
 
-# Copyright (C)2017-2018, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2021, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -33,14 +33,11 @@
 #eth0_address=1.2.3.4
 #eth0_netmask=255.255.255.0
 
-# Some network devices don't have permanent Ethernet MAC addresses.
-# You can assign a locally unique Ethernet MAC address like this:
+# You can also explicitly request DHCP for an interface.
 
-#eth0_macaddr=02:00:00:00:00:01
 #eth0_address=dhcp
 
-# USB Network Gadget configuration
+# Some network devices don't have permanent Ethernet MAC addresses.
+# You can assign a persistent locally unique Ethernet MAC address like this:
 
-#usb0_address=10.254.254.252
-#usb0_netmask=255.255.255.248
-#usb0_peer=10.254.254.253
+#eth0_macaddr=02:11:22:33:44:55
