Need to include $(BOARDNAME).mk
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19595 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/c/lib/Makefile
+++ b/examples/c/lib/Makefile
@@ -23,7 +23,8 @@
 # Override the following macro to build out of tree
 
 MUNTSOS		?= ../../..
-LIBSIMPLEIO	?= /usr/local/share/libsimpleio
+
+include $(MUNTSOS)/include/$(BOARDNAME).mk
 
 AR		= $(CROSS_COMPILE)ar
 CC	 	= $(CROSS_COMPILE)gcc
