Renamed libsimpleio/pascal/ to more the apropos libsimpleio/freepascal/
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19651 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/examples/pascal/programs/Makefile
+++ b/examples/pascal/programs/Makefile
@@ -25,10 +25,10 @@
 MUNTSOS		?= ../../..
 LIBSIMPLEIO	?= /usr/local/share/libsimpleio
 
-include $(LIBSIMPLEIO)/pascal/include/pascal.mk
-include $(LIBSIMPLEIO)/pascal/include/libsimpleio.mk
+include $(LIBSIMPLEIO)/freepascal/include/pascal.mk
+include $(LIBSIMPLEIO)/freepascal/include/libsimpleio.mk
 
-FPC_FLAGS	+= -Fu$(MUNTSOS)/examples/pascal/units
+FPC_FLAGS	+= -Fu$(MUNTSOS)/examples/freepascal/units
 
 # Compile the test programs
 
